Stage 11: Improvement to how to do visible occupants in Main.java